@@ -48,9 +48,9 @@ copyright = u'CTTC'
 # built documents.
 #
 # The short X.Y version.
-version = 'v8'
+version = 'v10'
 # The full version, including alpha/beta/rc tags.
-release = 'v8'
+release = 'v10'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
